--- a/DailyFarmProject/src/index.css
+++ b/DailyFarmProject/src/index.css
@@ -6,6 +6,8 @@
 @tailwind utilities;
 
 
+
+
 @layer base {
     body {
         @apply bg-[#FFFBFA]  font-[--noto-sans];
@@ -23,14 +25,12 @@
     @apply block mt-2 mb-3 w-full border-b-2 border-gray-200 focus:outline-none focus:border-2 focus:border-gray-300 focus:rounded-md ;
     }
     .loginButton{
-        @apply mt-2 border-2 border-[#0B6B5F] bg-[#0B6B5F] w-3/5 p-1 rounded-md text-white m-auto opacity-80 active:opacity-100
+        @apply mt-2 mb-2 border-2 border-[#0B6B5F] bg-[#0B6B5F] w-3/5 p-1 rounded-md text-white m-auto opacity-80 active:opacity-100
         ;
     }
 
+}
 
-
-    @theme{
-        --noto-sans: "Noto Sans", serif;
-    }
-
+@theme{
+    --noto-sans: "Noto Sans", serif;
 }
