--- a/DailyFarmProject/src/index.css
+++ b/DailyFarmProject/src/index.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import "leaflet/dist/leaflet.css";
+
 @import "tailwindcss";
 
 @tailwind base;
@@ -18,15 +20,19 @@
 
 @layer component {
     .inputForm {
-        @apply flex flex-col border-2  border-gray-300 p-3 rounded-lg;
+        @apply flex flex-col border-2  border-gray-300 p-5 rounded-lg;
     }
 
     .inputFormItem {
-    @apply block mt-2 mb-3 w-full border-b-2 border-gray-200 focus:outline-none focus:border-2 focus:border-gray-300 focus:rounded-md ;
+    @apply block mt-2 mb-3 w-full  border-b-2 border-gray-200 focus:outline-none focus:border-2 focus:border-gray-300 focus:rounded-md ;
     }
     .loginButton{
         @apply mt-2 mb-2 border-2 border-[#0B6B5F] bg-[#0B6B5F] w-3/5 p-1 rounded-md text-white m-auto opacity-80 active:opacity-100
         ;
+    }
+
+    .leaflet-control-attribution {
+        @apply hidden;
     }
 
 }
